Fix modal close button alignment

--- a/web/scss/components/modal.scss
+++ b/web/scss/components/modal.scss
@@ -95,6 +95,9 @@
 }
 
 .modal-content {
+  .modal-header {
+    justify-content: space-between;
+  }
   border: none;
   border-radius: 6px;
 }
